<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:inputType="textPersonName"
        android:hint="@string/username_hint"
         />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_below="@id/userName"
        />

    <EditText
        android:id="@+id/aboutUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_message_black_24dp"
        android:drawableStart="@drawable/ic_message_black_24dp"
        android:inputType="textMultiLine"
        android:hint="@string/about_hint"
        android:layout_below="@+id/Email"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="detailsActivity"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/aboutUser"
        android:background="@color/colorAccent"
        android:textColor="#FFF"
        android:text="@string/button_text" />
</RelativeLayout>